Design edit-team and create-stadium